# ANHALYZE

./: .gitignore  CHANGELOG.md  LICENSE  README.md  anha4_utils.py  ncdump_test.py  plot_anha4_data.ipynb  pyproject.toml  reading_anha4_data.ipynb  reading_anha4_data.py  requirements.in  requirements.txt  setup.py  testing_generic_nc_data.ipynb  testing_reading_anha4_data.ipynb
anhalyze/: __init__.py  anhalize_plot_utils.py  anhalyze_lhs.py  anhalyze_plot_utils.py  anhalyze_utils.py  create_mask_region.py  get_full_timeseries.py
anhalyze/config/: __init__.py  package_data.toml
anhalyze/core/: __init__.py  anhalyze.py  anhalyze_geo.py  anhalyze_plot_utils.py  anhalyze_plot_utils_depr.py  anhalyze_timeseries.py  anhalyze_timeseries_depr.py  anhalyze_utils.py  create_mask.py  download_mask.py  downloader.py
anhalyze/core/DEPR/: anhalyze_geo_depr.py  anhalyze_plot_utils_depr.py  anhalyze_utils_depr.py
anhalyze/tests/: map_projections.py
anhalyze/tools/: get_full_timeseries.py
anhalyze/tools/DEPR/: get_full_timeseries_depr.py
anhalyze/tutorials/: anhalyze_tutorial.ipynb  anhalyze_tutorial_LHS.ipynb
reports/: james_bay_ANHAlysis-report_Apr1.ipynb
scripts/: Projections.ipynb  anha4_plot_utils.py  anha4_utils.py  get_full_timeseries.py  james_bay_timeseries_data.csv  plot_anha4_data.ipynb  reading_anha4_data.ipynb  test_analyze_aha4_data.ipynb  test_analyze_anha4_data.ipynb  test_read_anha4_data.ipynb  testing_reading_anha4_data.ipynb
scripts/sandbox/: test_analyze_anha4_data.ipynb  test_read_anha4_data.ipynb
